# ai_agent

./: .gitignore
backend/: README.md  pyproject.toml
backend/src/backend/database/client/: chroma_client.py  document_importer.py  indexed_content.py
backend/tests/: mock_data.py  test_client.py  test_document_import_cli.py  test_document_importer.py
backend/utils/: document_import_cli.py
